<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZ Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="pantry">Pantry List</string>
    <string name="recipe">Recipe List</string>
    <string name="shopping">Shopping List</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="start_app">Starting application:</string>
    <string name="new_list">New List</string>
    <string name="scan">Scan</string>
    <string name="add_scan">Add</string>
    <string name="pantry_screen">This is the pantry screen</string>
    <string name="infor_screen">This is the information screen</string>
    <string name="label_item_name">Item Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_unit">Unit</string>
    <string name="label_note">Note</string>
    <string name="label_price">Price</string>
    <string name="label_dollar">$</string>
    <string name="label_category">Category</string>
    <string name="label_barcode">Barcode</string>
    <string name="label_add_ingredients">add your ingredients here</string>
    <string name="label_add_steps">add your steps here</string>
    <string name="label_add_images">add your images here</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_steps">Steps</string>
    <string name="label_step_id">Step Id</string>
    <string name="label_step_detail">Step Detail</string>
    <string name="label_images">Images</string>
    <string name="label_edit_item">Edit Item</string>
    <string name="label_shop_item">Add to Shopping</string>
    <string name="button_delete">Delete</string>
    <string name="button_move">Move</string>
    <string name="button_done">Done</string>
    <string name="action_bar_code">Bar code scanner</string>
    <string name="action_text">Text input</string>
    <string name="action_email">Share by email</string>
    <string name="action_voice">Voice input</string>
    <string name="action_cloud">Cloud Search</string>
    <string name="action_shopping">Cloud Search</string>
    <string name="recipe_context_edit">Edit</string>
    <string name="recipe_context_rename">Rename</string>
    <string name="recipe_context_delete">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    
    <string name="tv_author">© Ye Cheng. All rights reserved.</string>
    <string name="tv_version">v1.1.1</string>
    <string name="tv_thanks">Special thanks to</string>
    <string name="tv_thanks_Ye">Ye Cheng (EZ Grocery List designer and developer)</string>
    <string name="tv_thanks_Puder">Professor Arno Puder (SFSU)</string>
    <string name="tv_thanks_final">And finally, a big thank you to</string>
    <string name="tv_thanks_beta">Users of EZ Grocery List</string>
    
    <string name="tv_setting">Will be available in next release</string>

    <string-array name="pantry_menu">
        <item></item>
        <item>Open List</item>
        <item>New List</item>
        <item>Change Name</item>
        <item>Category</item>
        <item>Save</item>
        <item>Remove</item>
        <item>Add to Shopping</item>
        <!-- item>Other List 1</item -->
        <!-- item>Other List 2</item -->
        <!-- item>Other List 3</item -->
    </string-array>
    <string-array name="item_unit">
        <item>ea</item>
        <item>lb</item>
        <item>kg</item>
        <item>g</item>
        <item>box</item>
        <item>bag</item>
        <item>other</item>
    </string-array>
    <string-array name="item_category">
        <item>bread</item>
        <item>cereal</item>
        <item>meat</item>
        <item>dairy</item>
        <item>product</item>
        <item>sea food</item>
        <item>new</item>
    </string-array>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>How to Use</item>
        <item>Open List</item>
        <item>New List</item>
        <item>Change Name</item>
        <!-- item>Category</item-->
        <item>Remove</item>
        <!-- item>Add to Shopping</item-->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
        <item>@drawable/main_icon</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>