<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ezgrocerylist.MainActivity" >

    <!--  item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>-->
        <!-- Search, should appear as action button -->
        
    <item android:id="@+id/action_bar_code"
          android:icon="@drawable/ic_bar_code_white"
          android:title="@string/action_bar_code"
          app:showAsAction="always" />
    <item android:id="@+id/action_text"
          android:icon="@drawable/ic_text_white"
          android:title="@string/action_text"
          app:showAsAction="always" />
    <item android:id="@+id/action_email"
          android:icon="@drawable/ic_share_email"
          android:title="@string/action_email"
          app:showAsAction="always" />
    <item android:id="@+id/action_voice"
          android:icon="@drawable/ic_voice_search"
          android:title="@string/action_voice"
          app:showAsAction="always" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never" />
    

</menu>

