<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbStepId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_step_id" />

    <NumberPicker
        android:id="@+id/npStepId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbStepDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_step_detail" />

    <EditText
        android:id="@+id/etStepDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:onClick="deleteStep"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/btMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:onClick="moveStep"
            android:text="@string/button_move" />

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:onClick="saveStep"
            android:text="@string/button_done" />
    </LinearLayout>

</LinearLayout>