<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ezgrocerylist.activity.ItemActivity" >

    <TextView
        android:id="@+id/lbUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lbQuantity"
        android:layout_alignParentRight="true"
        android:layout_marginRight="71dp"
        android:text="@string/label_unit" />

    <Spinner
        android:id="@+id/spUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbUnit"
        android:layout_below="@+id/lbUnit"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/lbItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/label_item_name" />

    <TextView
        android:id="@+id/lbQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbItemName"
        android:layout_below="@+id/lbItemName"
        android:layout_marginTop="15dp"
        android:text="@string/label_quantity" />

    <NumberPicker
        android:id="@+id/npQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbQuantity"
        android:layout_alignTop="@+id/spUnit" />

    <TextView
        android:id="@+id/lbPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/npQuantity"
        android:layout_below="@+id/npQuantity"
        android:layout_marginTop="25dp"
        android:text="@string/label_price" />

    <TextView
        android:id="@+id/lbDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbPrice"
        android:layout_marginTop="12dp"
        android:text="@string/label_dollar" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbDollar"
        android:layout_alignBottom="@+id/lbDollar"
        android:layout_marginLeft="12dp"
        android:layout_toLeftOf="@+id/etItemName"
        android:layout_toRightOf="@+id/lbDollar"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/bDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:onClick="saveItem"
        android:text="@string/button_done" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbNote"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/lbDollar"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etItemName"
        android:layout_alignTop="@+id/npQuantity"
        android:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/lbNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbPrice"
        android:layout_below="@+id/etBarcode"
        android:layout_marginTop="21dp"
        android:text="@string/label_note" />

    <EditText
        android:id="@+id/etBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPrice"
        android:layout_alignBottom="@+id/etPrice"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lbCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spUnit"
        android:layout_alignLeft="@+id/etItemName"
        android:layout_marginLeft="9dp"
        android:text="@string/label_category" />

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbQuantity"
        android:layout_alignRight="@+id/spUnit"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:inputType="none"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbPrice"
        android:layout_alignBottom="@+id/lbPrice"
        android:layout_centerHorizontal="true"
        android:text="@string/label_barcode" />

</RelativeLayout>