<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res/com.ezgrocerylist"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="560dp" >

        <ezgrocerylist.circlemenu.view.CircleLayout
            android:id="@+id/main_circle_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/main_selected_textView"
            android:layout_gravity="center_horizontal"
            circle:firstChildPosition="South"
            circle:isRotating="true"
            circle:rotateToCenter="true" >

            <ezgrocerylist.circlemenu.view.CircleImageView
                android:id="@+id/main_pantry_image"
                circle:name="@string/pantry"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/main_pantry" />

            <ezgrocerylist.circlemenu.view.CircleImageView
                android:id="@+id/main_recipe"
                circle:name="@string/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_recipe" />

            <ezgrocerylist.circlemenu.view.CircleImageView
                android:id="@+id/main_shopping"
                circle:name="@string/shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_shoppinglist" />

            <ezgrocerylist.circlemenu.view.CircleImageView
                android:id="@+id/main_setting"
                circle:name="@string/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_setting" />

            <ezgrocerylist.circlemenu.view.CircleImageView
                android:id="@+id/main_about"
                circle:name="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon" >
            </ezgrocerylist.circlemenu.view.CircleImageView>
        </ezgrocerylist.circlemenu.view.CircleLayout>

        <TextView
            android:id="@+id/main_selected_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/center_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:clickable="true"
            android:src="@drawable/main_pantry" />
    </RelativeLayout>

    <!--
         ExpandableListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/huback" /
    -->

</LinearLayout>